2004-11-03  Cedric Gustin  <cedric.gustin@swing.be>
  
	* MSVC_Net2003/*/Makefile.am: Initial release.
	* configure.in: Added MSVC_Net2003 Makefiles.
	* Makefile.am: Added MSVC_Net2003 subdir.

2004-11-03  Cedric Gustin  <cedric.gustin@swing.be>
  
	* MSVC_Net2003/: Added examples and tests projects from Timothy Shead.
	* gtk/gtkmmconfig.h.in: Added dllexport/dllimport macros for
	MSVC. Requires glibmm > 2.4.6 (for glibmmconfig.h).
	
2.4.7:

2004-11-03  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus/popup/examplewindow.[h|cc]: Use the popup 
	UIManager node type, so that this example works.
	* docs/tutorial/gtkmm-tut.xml: Update the popup menu section.

2004-11-03  Murray Cumming  <murrayc@murrayc.com>

	* Removed gtkmm.spec.in and mention of it in configure.in and 
	Makefile.am, yet again. There is no point in having a broken spec 
	file that nobody is maintaining. spec files are distro-specific and 
	belong with distros.

2004-10-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.ccg: SignalProxy_Modify::gtk_callback():
	Do not return before actually copying the value.
	* examples/book/treeview/: Added filter_modify example, to show the 
	use of set_modify_func().

2004-10-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.[hg|ccg]: Added implementations of 
	set_value_impl() to ouput a warning when it is used instead of 
	the child model.
	* gtk/src/treeview.[hg|ccg]: Added _get_base_model() non-public API 
	member method to get the child model, if necessary. Used it in the 
	cell renderer signal handlers instead of get_model(). This fixes 
	the crash in examples/book/treeview/filter/

2004-10-29  Murray Cumming  <murrayc@murrayc.com>

	* exmaples/src/treeview/example_window.h: Add the new model column to 
	the model record.
	* examples/src/treeview/example_window.cc: The visible_func seems to 
	get an iterator to the child model, not the filter model, so do not 
	convert.
