@@ -40,8 +40,8 @@ Gtk::Window* do_ui_manager();
 
 Demo child0[] = {
   { "Editable Cells", "example_treeview_editable_cells.cc", sigc::ptr_fun(&do_treeview_editable_cells), 0 },
-  { "List Store", "example_treeview_liststore.cc", do_treeview_liststore, 0 },
-  { "Tree Store", "example_treeview_treestore.cc", do_treeview_treestore, 0 },
+  { "List Store", "example_treeview_liststore.cc", sigc::ptr_fun(&do_treeview_liststore), 0 },
+  { "Tree Store", "example_treeview_treestore.cc", sigc::ptr_fun(&do_treeview_treestore), 0 },
   { 0, 0, type_slotDo(), 0 }
 };
 
