@@ -36,8 +36,10 @@ TextWidget::TextWidget(bool is_source)
 
   if (is_source)
   {
+#ifndef G_OS_WIN32
     Pango::FontDescription fontDesc("Courier 12");
     m_TextView.modify_font(fontDesc);
+#endif /* G_OS_WIN32 */
     m_TextView.set_wrap_mode (Gtk::WRAP_NONE);
 
     m_refTextBuffer->create_tag("comment")->property_foreground().set_value("red");
