@@ -47,54 +47,54 @@ MainWindowClass::MainWindowClass()
 
     set_size_request(350,100);
   
-    Gtk::VBox* vbox = manage(new Gtk::VBox(false, 0));
+    Gtk::VBox* vbox = Gtk::manage(new Gtk::VBox(false, 0));
     add(*vbox);
 
-    Gtk::Toolbar* toolbar = manage(new Gtk::Toolbar());
+    Gtk::Toolbar* toolbar = Gtk::manage(new Gtk::Toolbar());
     vbox->pack_start(*toolbar, Gtk::PACK_SHRINK);
 
-    Gtk::OptionMenu* optionmenu = manage(new Gtk::OptionMenu());
+    Gtk::OptionMenu* optionmenu = Gtk::manage(new Gtk::OptionMenu());
     vbox->pack_start(*optionmenu, Gtk::PACK_SHRINK);
 
-    Gtk::Button* button = manage(new Gtk::Button("Quit"));
+    Gtk::Button* button = Gtk::manage(new Gtk::Button("Quit"));
     button->signal_clicked().connect(sigc::mem_fun(*this, &MainWindowClass::quit_pressed_cb));
     vbox->pack_start(*button);
 
 
-    Gtk::ToolButton* toolbutton = manage(new Gtk::ToolButton(Gtk::Stock::NEW));
+    Gtk::ToolButton* toolbutton = Gtk::manage(new Gtk::ToolButton(Gtk::Stock::NEW));
     toolbutton->set_label("New Item");
     toolbutton->set_is_important();
     toolbar->append(*toolbutton, sigc::bind( sigc::mem_fun( 
                                              *this, &MainWindowClass::toolbar_cb),
                                              "New Item"));
 
-    toolbutton = manage(new Gtk::ToolButton(Gtk::Stock::OPEN));
+    toolbutton = Gtk::manage(new Gtk::ToolButton(Gtk::Stock::OPEN));
     toolbutton->set_label("Open Item");
     toolbar->append(*toolbutton, sigc::bind( sigc::mem_fun( *this, &MainWindowClass::toolbar_cb), "Open Item"));
 
-    toolbutton = manage(new Gtk::ToolButton(Gtk::Stock::SAVE));
+    toolbutton = Gtk::manage(new Gtk::ToolButton(Gtk::Stock::SAVE));
     toolbutton->set_label("Save Item");
     toolbar->append(*toolbutton, sigc::bind( sigc::mem_fun(*this, &MainWindowClass::toolbar_cb), "Save Item"));
 
-    Gtk::SeparatorToolItem* separator = manage(new Gtk::SeparatorToolItem());
+    Gtk::SeparatorToolItem* separator = Gtk::manage(new Gtk::SeparatorToolItem());
     toolbar->append(*separator);
 
-    toolbutton = manage(new Gtk::ToolButton(Gtk::Stock::UNDO));
+    toolbutton = Gtk::manage(new Gtk::ToolButton(Gtk::Stock::UNDO));
     toolbutton->set_label("Undo Item");
     toolbar->append(*toolbutton, sigc::bind( sigc::mem_fun(*this, &MainWindowClass::toolbar_cb), "Undo Item"));
 
-    toolbutton = manage(new Gtk::ToolButton(Gtk::Stock::REDO));
+    toolbutton = Gtk::manage(new Gtk::ToolButton(Gtk::Stock::REDO));
     toolbutton->set_label("Redo Item");
     toolbar->append(*toolbutton, sigc::bind( sigc::mem_fun(*this, &MainWindowClass::toolbar_cb), "Redo Item"));
 
-    separator = manage(new Gtk::SeparatorToolItem());
+    separator = Gtk::manage(new Gtk::SeparatorToolItem());
     toolbar->append(*separator);
 
-    Gtk::ToggleToolButton* togglebutton = manage(new Gtk::ToggleToolButton(Gtk::Stock::CONVERT));
+    Gtk::ToggleToolButton* togglebutton = Gtk::manage(new Gtk::ToggleToolButton(Gtk::Stock::CONVERT));
     togglebutton->set_label("Convert Toggle");
     toolbar->append(*togglebutton, sigc::bind( sigc::mem_fun(*this, &MainWindowClass::toolbar_cb), "Convert Toggle"));
 
-    Gtk::Menu* menu = manage(new Gtk::Menu());
+    Gtk::Menu* menu = Gtk::manage(new Gtk::Menu());
     optionmenu->set_menu(*menu);
 
     menu->items()
