@@ -1,3 +1,13 @@
+2004-11-04  Cedric Gustin  <cedric.gustin@swing.be>
+  
+	* examples/stock/stock.cc, examples/tictactoe/tictactoe.cc: add
+	Gtk namespace to "manage" calls (Gtk::manage) as required by MSVC.
+	* demos/gtk-demo/demos.h: Create all slots through sigc::ptr_fun
+	(required by MSVC).
+	* demos/gtk-demo/demowindow.cc: Use a const ref for
+	row[columns.slot] slot (required by MSVC).
+	* demos/gtk-demo/textwidget.cc: Use default system font on win32.
+
 2004-11-03  Cedric Gustin  <cedric.gustin@swing.be>
   
 	* MSVC_Net2003/*/Makefile.am: Initial release.
